{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Simple",
            "id": "f3a2aa27-8505-4ae8-91c9-66efeff675df",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "1205c12a-fe40-4d16-b0d0-15949115a6aa",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "ddd00e67-06e1-466d-907e-602d13662b1f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "Horizontal",
                    "id": "4ba28246-5a33-4e10-a68a-88e6642c3bb1",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "a83381a4-ab16-45a1-9ec8-bb37109d249b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "80d2dfb8-b195-451a-8348-82a77611c354",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "2fe91ca1-d9f3-4807-b341-e03b49a5f0f8",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}